add info iframe
Signed-off-by: Christian Richter <christian@boltares.de>

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,8 +1,19 @@
 <html>
     <head>
-        <title>TEST</title>
+        <title>Graveyard</title>
+    <style>
+     body {
+         background: #000000;
+         color: #ffffff;
+         }
+     
+    </style>
     </head>
     <body>
-        <h1>TEST</head>
+        <h1>Graveyard</h1>
+        <p>
+            Welcome to the graveyard, here is where we lay our discontinued projects to rest.
+            Take your time to mourn the loss, but never forget to celebrate their sucess and the fun you had working on them.
+        </p>
     </body>
 </html>
