add toilet sounds, this time for real
Signed-off-by: Christian Richter <christian@boltares.de>

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
         <h1>Graveyard</h1>
         <p>
             Welcome to the graveyard, here is where we lay our discontinued projects to rest.
-            Take your time to mourn the loss, but never forget to celebrate their sucess and the fun you had working on them.
+            Take your time to mourn the loss, but never forget to celebrate their success and the fun you had working on them.
         </p>
     </body>
 </html>
